--- a/shared/loader/loader.module.css
+++ b/shared/loader/loader.module.css
@@ -1,5 +1,5 @@
 .loader {
-    border: 4px solid var(--background-color-highlight);
+    border: 4px solid var(--background-color-500);
     border-top: 4px solid var(--primary);
     border-radius: 50%;
     width: 8px;
