--- a/app/auth/layout.module.css
+++ b/app/auth/layout.module.css
@@ -21,6 +21,7 @@
     height: calc(100vh - var(--header-height));
     width: 100%;
     position: absolute;
+    z-index: 0;
     filter: brightness(0.42);
 }
 
