refactor: improve side-nav styling and behavior

--- a/shared/side-nav/side-nav.module.css
+++ b/shared/side-nav/side-nav.module.css
@@ -17,11 +17,19 @@
     font-size: 1.1em;
 }
 
-.aside nav {
+.aside nav details {
     width: 220px;
     display: flex;
     flex-direction: column;
     gap: 1em;
+
+    summary{
+        cursor: pointer;
+    }
+    a {
+        display: flex;
+        gap: 5px;
+    }
 }
 
 .aside nav:not(:first-child) {
