--- a/shared/header/header.module.css
+++ b/shared/header/header.module.css
@@ -56,6 +56,10 @@
     justify-content: space-between;
     align-items: center;
     padding-inline: 1em;
+    position: sticky;
+    top: 0;
+    background-color: var(--background-color);
+    z-index: 5;
 }
 
 @media (width < 1024px) {
