--- a/app/cart/_components/full.module.css
+++ b/app/cart/_components/full.module.css
@@ -1,5 +1,5 @@
 .item {
-    margin-top: .55em;
+    margin-top: 0.55em;
     display: flex;
     align-items: center;
     justify-content: space-between;
