--- a/shared/button/button.module.css
+++ b/shared/button/button.module.css
@@ -47,7 +47,6 @@
     font-weight: bold;
 }
 
-
 .bordered {
     text-align: center;
     position: relative;
@@ -68,7 +67,7 @@
     position: absolute;
     background: var(--primary-highlight);
     display: block;
-    content: "";
+    content: '';
     border-radius: 100%;
     opacity: 1;
     z-index: 1;
