--- a/shared/avatar/avatar.module.css
+++ b/shared/avatar/avatar.module.css
@@ -9,7 +9,7 @@
     cursor: pointer;
     border-radius: var(--border-radius);
     color: var(--text-color);
-    background-color: var(--background-color-highlight)
+    background-color: var(--background-color-highlight);
 }
 
 .icon {
