--- a/shared/form/feedback.module.css
+++ b/shared/form/feedback.module.css
@@ -3,7 +3,7 @@
     gap: 0.5em;
     justify-content: center;
     align-items: center;
-    color: #8BC34A;
+    color: #8bc34a;
     background: #4caf502b;
     height: 30px;
     border-radius: var(--border-radius);
