--- a/shared/header/menu-button.module.css
+++ b/shared/header/menu-button.module.css
@@ -8,14 +8,14 @@
 }
 
 .burger:hover div {
-    background-color: var(--text-color)
+    background-color: var(--text-color);
 }
 
 .burger div {
     width: 25px;
     height: 3px;
     border-radius: 5px;
-    background-color: var(--border-color)
+    background-color: var(--border-color);
 }
 
 @media (width < 1000px) {
