--- a/shared/input/inputs.module.css
+++ b/shared/input/inputs.module.css
@@ -59,8 +59,8 @@
 }
 
 .invalid {
-  top: 2px !important;
-  left: 5px !important;
+  top: 2px;
+  left: 5px;
   font-size: 12px;
   color: var(--danger);
 }
