--- a/app/watch/layout.module.css
+++ b/app/watch/layout.module.css
@@ -1,12 +1,36 @@
 .main {
-    width: 1024px;
     margin: 0 auto;
-    flex: 1;
+    max-width: 1740px;
+    display: grid;
+    grid-template-areas:
+          'main-video explore'
+          'comments explore';
+    grid-template-columns: 3fr 1fr;
+    grid-template-rows: 1fr;
+    width: 100%;
+    height: 100vh;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
 }
 
-@media (width < 1024px) {
+@media (max-width: 1440px) {
     .main {
-        width: 95%;
-        margin-bottom: 1em;
+        grid-template-columns: 2fr 1fr;
+    }
+}
+
+@media (max-width: 1280px) {
+    .main {
+        grid-template-columns: 1.75fr 1fr;
+    }
+}
+
+@media (max-width: 1024px) {
+    .main {
+        grid-template-areas:
+            'main-video'
+            'explore';
+        grid-template-columns: 1fr;
+        grid-template-rows: auto;
+        height: 100%;
     }
 }
