style: change some shared components logic

--- a/shared/side-nav/side-nav.module.css
+++ b/shared/side-nav/side-nav.module.css
@@ -46,6 +46,11 @@
   background-color: var(--background-color-100);
 }
 
+.nav svg {
+    height: 22px;
+    width: 22px;
+}
+
 @media (width < 750px) {
   .aside {
     display: none;
