--- a/shared/avatar/avatar.module.css
+++ b/shared/avatar/avatar.module.css
@@ -13,23 +13,32 @@
 }
 
 .icon {
-    text-align: center;
+    font-weight: 400;
+    width: 40px;
+    height: 40px;
+    overflow: hidden;
+    cursor: pointer;
     display: flex;
     justify-content: center;
     align-items: center;
-    background-color: var(--background-color-900);
-    font-size: 12px;
-    width: 30px;
-    height: 30px;
-    border-radius: 24px;
-    font-weight: bolder;
+    border-radius: var(--border-radius);
+    padding: 1px;
+    background-color: var(--background-color-100);
+}
+
+.icon svg {
+    fill: var(--svg-fill-color);
+}
+
+.icon:hover svg {
+    fill: var(--svg-fill-color-hover);
 }
 
 .image {
     display: flex;
     justify-content: center;
     align-items: center;
-    width: 24px;
-    height: 24px;
-    border-radius: 24px;
+    width: 40px;
+    height: 40px;
+    overflow: hidden;
 }
