--- a/shared/side-nav/side-nav.module.css
+++ b/shared/side-nav/side-nav.module.css
@@ -10,6 +10,8 @@
   flex-direction: column;
   position: relative;
   padding-left: 0.5em;
+  position: sticky;
+  top: 70px;
 }
 
 .aside h3 {
@@ -18,30 +20,29 @@
 }
 
 .aside nav details {
-    width: 220px;
-    display: flex;
-    flex-direction: column;
-    gap: 1em;
+  width: 220px;
+  display: flex;
+  flex-direction: column;
+  gap: 0.5em;
 
-    summary{
-        cursor: pointer;
-    }
-    a {
-        display: flex;
-        gap: 5px;
-    }
+  summary {
+    cursor: pointer;
+  }
+  a {
+    display: flex;
+  }
 }
 
 .aside nav:not(:first-child) {
   padding-top: 1em;
 }
 
-.nav > a {
+.nav details > a {
   display: flex;
   align-items: center;
   justify-content: start;
   gap: 0.5em;
-  padding: 10px;
+  padding-inline-start: 10px;
   height: 35px;
   line-height: 35px;
   border-radius: var(--border-radius);
@@ -49,14 +50,14 @@
   color: var(--text-color-300);
 }
 
-.nav > a:hover {
+.nav details > a:hover {
   color: var(--text-color);
   background-color: var(--background-color-100);
 }
 
 .nav svg {
-    height: 22px;
-    width: 22px;
+  height: 22px;
+  width: 22px;
 }
 
 @media (width < 750px) {
